deploy/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: identity
  labels:
    haven.identity/managed: "true"
    app.kubernetes.io/part-of: haven
